# appdb

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  readmd.md
.factory/: init.sh  services.yaml
core/: Cargo.toml
core/src/: crypto.rs  crypto_tests.rs  error.rs  lib.rs  pagination.rs  prelude.rs
core/src/auth/: mod.rs  tests.rs
core/src/connection/: mod.rs  tests.rs
core/src/database/: mod.rs
core/src/facade/: mod.rs
core/src/graph/: mod.rs
core/src/model/: identifier.rs  meta.rs  meta_tests.rs  mod.rs  relation.rs  relation_tests.rs  schema.rs
core/src/query/: builder.rs  builder_tests.rs  mod.rs  sql.rs
core/src/repository/: mod.rs  relation_sync.rs  tests.rs
core/src/serde_utils/: id.rs  id_tests.rs
core/src/tx/: mod.rs
core/tests/: facade_exports.rs  integration_db.rs  perf_relation_apis.rs  sensitive_compile.rs  sensitive_roundtrip.rs
core/tests/ui/sensitive/: crypto_attributes_supported.rs  field_crypto_requires_secure.rs  field_crypto_requires_secure.stderr  field_crypto_unknown_key.rs  field_crypto_unknown_key.stderr  field_crypto_without_value.rs  field_crypto_without_value.stderr  nested_trait_bounds_compile_pass.rs  no_legal_non_secure_lookup.rs  no_legal_non_secure_lookup.stderr  no_secure_fields.rs  secure_enum_direct_rejected.rs  secure_enum_direct_rejected.stderr  secure_then_unique.rs  secure_then_unique.stderr  type_crypto_unknown_key.rs  type_crypto_unknown_key.stderr  unique_then_secure.rs  unique_then_secure.stderr  unsupported_secure_type.rs  unsupported_secure_type.stderr
core/tests/ui/store/: back_relate_field_supported_shapes.rs  back_relate_field_unsupported_nested_wrapper.rs  back_relate_field_unsupported_nested_wrapper.stderr  derive_bridge_enum_dispatcher.rs  derive_bridge_multi_field_variant.rs  derive_bridge_multi_field_variant.stderr  derive_bridge_payload_without_bridge.rs  derive_bridge_payload_without_bridge.stderr  derive_bridge_struct_variant.rs  derive_bridge_struct_variant.stderr  derive_bridge_unit_variant.rs  derive_bridge_unit_variant.stderr  impl_schema_expr_surface.rs  multiple_id_fields.rs  multiple_id_fields.stderr  nested_ref_bindref_unique_rejected.rs  nested_ref_bindref_unique_rejected.stderr  nested_ref_enum_child_unsupported.rs  nested_ref_enum_child_unsupported.stderr  nested_ref_foreign_only_lookup_supported.rs  nested_ref_foreign_unique_rejected.rs  nested_ref_foreign_unique_rejected.stderr  nested_ref_foreign_unique_supported.rs  nested_ref_legacy_attr_rejected.rs  nested_ref_legacy_attr_rejected.stderr  nested_ref_non_store_child.rs  nested_ref_non_store_child.stderr  nested_ref_public_bindref.rs  nested_ref_public_foreign.rs  nested_ref_supported_shapes.rs  nested_ref_unsupported_box.rs  nested_ref_unsupported_box.stderr  nested_ref_unsupported_nested_wrapper.rs  nested_ref_unsupported_nested_wrapper.stderr  pagin_field_duplicate_rejected.rs  pagin_field_duplicate_rejected.stderr  pagin_field_option_rejected.rs  pagin_field_option_rejected.stderr  pagin_field_supported.rs  relate_field_duplicate_relation_rejected.rs  (+20 more)
macros/: Cargo.toml
macros/src/: lib.rs
(+125 files in other folders)
