[package]
name = "appdb-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Proc macros for the appdb crate"
documentation = "https://docs.rs/appdb-macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
